force-app/main/default/objects/Service_Payment_Detail__c/Service_Payment_Detail__c.object-meta.xml
<CustomObject>
    <label>Service Payment Detail</label>
    <nameField>
        <displayFormat>SPD-{0000}</displayFormat>
        <label>Service Payment Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Payment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>