force-app/main/default/objects/Service_Payment_Detail__c/fields/Bulletin_No__c.field-meta.xml
<CustomField>
    <fullName>Bulletin_No__c</fullName>
    <label>Bulletin No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>