force-app/main/default/objects/Service_Payment_Detail__c/fields/Confirm_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Date__c</fullName>
    <label>Confirm Date</label>
    <type>Date</type>
</CustomField>