force-app/main/default/objects/Service_Payment_Detail__c/fields/Confirm_Person__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirm Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>