force-app/main/default/objects/Service_Payment_Detail__c/fields/Fix_Date__c.field-meta.xml
<CustomField>
    <fullName>Fix_Date__c</fullName>
    <label>Fix Date</label>
    <type>Date</type>
</CustomField>