force-app/main/default/objects/Service_Payment_Detail__c/fields/Free_Coupon_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Free_Coupon_Payment_Amount__c</fullName>
    <label>Free Coupon Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>