force-app/main/default/objects/Service_Payment_Detail__c/fields/Payment_Control_No__c.field-meta.xml
<CustomField>
    <fullName>Payment_Control_No__c</fullName>
    <label>Payment Control No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>