force-app/main/default/objects/Service_Payment_Detail__c/fields/Payment_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Total_Amount__c</fullName>
    <label>Payment Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>