force-app/main/default/objects/Service_Payment_Detail__c/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <label>Serial No</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>