force-app/main/default/objects/Service_Payment_Detail__c/fields/Statement_Doc_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Statement_Doc_Receipt_Date__c</fullName>
    <label>Statement Doc Receipt Date</label>
    <type>Date</type>
</CustomField>