force-app/main/default/objects/Service_Payment_Detail__c/fields/Vat_Code__c.field-meta.xml
<CustomField>
    <fullName>Vat_Code__c</fullName>
    <label>Vat Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>