force-app/main/default/objects/Service_Payment_Detail__c/fields/Warranty_Claim_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim_Payment_Amount__c</fullName>
    <label>Warranty Claim Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>